{
  "sourceLanguage" : "en",
  "strings" : {
    " (%@)" : {

    },
    "%@ " : {

    },
    "alert_body" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Something went wrong! Try again later"
          }
        }
      }
    },
    "alert_button" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No worries"
          }
        }
      }
    },
    "alert_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error"
          }
        }
      }
    },
    "imperial_label" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "IM"
          }
        }
      }
    },
    "imperial_unit" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fahrenheit"
          }
        }
      }
    },
    "metric_label" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ME"
          }
        }
      }
    },
    "metric_unit" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Celsius"
          }
        }
      }
    },
    "navigation_title_search" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        }
      }
    },
    "navigation_title_temprature" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Temperature"
          }
        }
      }
    },
    "no_temprature_found" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select a location"
          }
        }
      }
    },
    "search_placeholder" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter a location"
          }
        }
      }
    }
  },
  "version" : "1.0"
}