...
        HStack {
            Spacer()
            Button(action: {
                vm.stopMonitoringLocationChanges()
                isSheetPresented.toggle()
            }) {
                Image(systemName: "location.magnifyingglass")
                    .resizable()
                    .frame(width: 24, height: 24)
                    .padding()
                    .background(Color.themeColor)
                    .foregroundColor(.white)
                    .clipShape(Circle())
...
